[package]
name = "ez_pci"
version = "1.0.0"
edition = "2024"
description = "A Rust OSDev library for using PCI in your own OS. "
repository = "https://github.com/ChocolateLoverRaj/ez_pci"
keywords = ["pci", "pcie", "osdev", "x86_64", "msi", "bar"]
categories = ["no-std"]
authors = ["Rajas Paranjpe <paranjperajas@gmail.com>"]

[dependencies]
acpi = { version = "5.2.0", default-features = false }
bitfield = { version = "0.19.1", default-features = false }
num_enum = { version = "0.7.4", default-features = false }
volatile = { version = "0.6.1", default-features = false, features = [
    "unstable",
] }
x86_64 = { version = "0.15.2", default-features = false, features = [
    "instructions",
] }
